--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 	<div data-ns-test="block-inline-div">
 		<div>Test1</div>
 		<div>Test2</div>
-		Answer: Inline
+		Answer: Inline-block
 	</div>
 	<div data-ns-test="block-inline-span">
         <span>Test1</span>
@@ -26,7 +26,7 @@
 	<div data-ns-test="block-inline-p">
       <p>Test1</p>
       <p>Test2</p>
-	  Answer: Inline
+	  Answer: Inline-block
 	</div>
 	<div data-ns-test="block-inline-input">
      <input>Test1
