--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 	<div data-ns-test="block-inline-div">
 		<div>Test1</div>
 		<div>Test2</div>
-		Answer: Inline-block
+		Answer:Block
 	</div>
 	<div data-ns-test="block-inline-span">
         <span>Test1</span>
@@ -31,7 +31,7 @@
 	<div data-ns-test="block-inline-input">
      <input>Test1
      <input>Test2
-	 Answer: Inline-block
+	 Answer: Block
 	</div>
 	<div data-ns-test="block-inline-cite">
      <cite>Test1</cite>
