--- a/main.html
+++ b/main.html
@@ -26,12 +26,12 @@
 	<div data-ns-test="block-inline-p">
       <p>Test1</p>
       <p>Test2</p>
-	  Answer: Inline-block
+	  Answer: block
 	</div>
 	<div data-ns-test="block-inline-input">
      <input>Test1
      <input>Test2
-	 Answer: Block
+	 Answer: inline
 	</div>
 	<div data-ns-test="block-inline-cite">
      <cite>Test1</cite>
